server/kustomize/base/psuite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: psuite
  labels:
    app: psuite
spec:
  rules:
    - host: psuite-milkyway.milkyway.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: psuite
                port:
                  number: 8384
